--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "google-map-react": "^2.1.10",
     "next": "9.5.4",
+    "next-images": "^1.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-icons": "^3.11.0"
+    "react-icons": "^3.11.0",
+    "swiper": "^6.8.1"
   }
 }
