--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "google-map-react": "^2.1.10",
-    "next": "9.5.4",
+    "next": "^11.1.0",
     "next-images": "^1.8.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "swiper": "^6.8.1"
   }
